samples/_failures_safe/1761644274_4a3236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c18cb351.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c18cb351.c:170:34: error: expected ‘;’ at end of input
  170 |             column = token.column
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_c18cb351.c:170:13: error: expected declaration or statement at end of input
  170 |             column = token.column
      |             ^~~~~~
./samples/SAFE/__tmp_c18cb351.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c18cb351.c:170:13: error: expected declaration or statement at end of input
